Update web-editor with new key cloud-editor

--- a/content/hardware/02.hero/boards/yun-rev2/compatibility.yml
+++ b/content/hardware/02.hero/boards/yun-rev2/compatibility.yml
@@ -2,12 +2,10 @@ software:
   - arduino-ide
   - iot-cloud
   - arduino-cli
-  - web-editor
+  - cloud-editor
 hardware:
-
   boards: ~
   carriers: ~
   shields:
     - 4-relays-shield
     - motor-shield-rev3
-
