--- a/content/hardware/08.edu/solution-and-kits/din-simul8/compatibility.yml
+++ b/content/hardware/08.edu/solution-and-kits/din-simul8/compatibility.yml
@@ -1,12 +1,12 @@
-software: 
-    - arduino-ide
-    - arduino-cli
-    - iot-cloud
-    - web-editor
+software:
+  - arduino-ide
+  - arduino-cli
+  - iot-cloud
+  - cloud-editor
 hardware:
   shields: ~
-  carriers: 
+  carriers:
     - din-celsius
     - portenta-machine-control
-  boards: 
+  boards:
     - opta
