--- a/content/hardware/03.nano/carriers/nano-motor-carrier/compatibility.yml
+++ b/content/hardware/03.nano/carriers/nano-motor-carrier/compatibility.yml
@@ -1,9 +1,9 @@
 software:
   - arduino-ide
   - arduino-cli
-  - web-editor
+  - cloud-editor
 hardware:
   shields: ~
   carriers: ~
-  boards: 
+  boards:
     - nano-33-iot
