--- a/content/hardware/04.pro/carriers/portenta-breakout/compatibility.yml
+++ b/content/hardware/04.pro/carriers/portenta-breakout/compatibility.yml
@@ -2,11 +2,10 @@ software:
   - arduino-ide
   - arduino-cli
   - iot-cloud
-  - web-editor
+  - cloud-editor
 hardware:
   boards:
     - portenta-h7
     - portenta-h7-lite
     - portenta-h7-lite-connected
     - portenta-x8
-
