--- a/content/hardware/05.pro-solutions/solutions-and-kits/edge-control/compatibility.yml
+++ b/content/hardware/05.pro-solutions/solutions-and-kits/edge-control/compatibility.yml
@@ -2,7 +2,7 @@ software:
   - arduino-ide
   - arduino-cli
   - iot-cloud
-  - web-editor
+  - cloud-editor
 hardware:
   boards:
     - portenta-h7
@@ -22,4 +22,3 @@ hardware:
 
   enclosures:
     - enclosure-kit
-
