--- a/content/hardware/05.pro-solutions/solutions-and-kits/enclosure-kit/compatibility.yml
+++ b/content/hardware/05.pro-solutions/solutions-and-kits/enclosure-kit/compatibility.yml
@@ -2,7 +2,7 @@ software:
   - arduino-ide
   - arduino-cli
   - iot-cloud
-  - web-editor
+  - cloud-editor
 hardware:
   boards:
     - edge-control
