--- a/content/hardware/06.nicla/boards/nicla-sense-me/compatibility.yml
+++ b/content/hardware/06.nicla/boards/nicla-sense-me/compatibility.yml
@@ -1,7 +1,7 @@
 software:
   - arduino-ide
   - arduino-cli
-  - web-editor
+  - cloud-editor
 hardware:
   boards:
     - portenta-h7
@@ -20,4 +20,3 @@ hardware:
 
   carriers:
     - edge-control
-
