--- a/content/hardware/09.kits/maker/make-your-uno-kit/compatibility.yml
+++ b/content/hardware/09.kits/maker/make-your-uno-kit/compatibility.yml
@@ -1,10 +1,10 @@
 software:
   - arduino-ide
   - arduino-cli
-  - web-editor
+  - cloud-editor
 hardware:
   shields:
-  - 4-relays-shield
-  - motor-shield-rev3
+    - 4-relays-shield
+    - motor-shield-rev3
   carriers: ~
   boards: ~
